--- a/src/components/ArcaDeNoesis.css
+++ b/src/components/ArcaDeNoesis.css
@@ -5,3 +5,7 @@
 .ArcaDeNoesis .sidebar__header button {
   margin-right: 0.5rem;
 }
+
+.ArcaDeNoesis .excalidraw .sidebar-triggers {
+  padding: 1rem 1rem 0 1rem;
+}
